tests/machine/x/swift/inner_join.error
tests/machine/x/swift/inner_join.swift:7:25: warning: forced cast from 'Int?' to 'Int' only unwraps optionals; did you mean to use '!'?
 5 | 	for o in orders {
 6 | 		for c in customers {
 7 | 			if !(o["customerId"] as! Int == c["id"] as! Int) { continue }
   |                         `- warning: forced cast from 'Int?' to 'Int' only unwraps optionals; did you mean to use '!'?
 8 | 			_res.append((orderId: o["id"] as! Int, customerName: c["name"] as! String, total: o["total"] as! Int))
 9 | 		}

tests/machine/x/swift/inner_join.swift:8:34: warning: forced cast from 'Int?' to 'Int' only unwraps optionals; did you mean to use '!'?
 6 | 		for c in customers {
 7 | 			if !(o["customerId"] as! Int == c["id"] as! Int) { continue }
 8 | 			_res.append((orderId: o["id"] as! Int, customerName: c["name"] as! String, total: o["total"] as! Int))
   |                                  `- warning: forced cast from 'Int?' to 'Int' only unwraps optionals; did you mean to use '!'?
 9 | 		}
10 | 	}

tests/machine/x/swift/inner_join.swift:8:97: warning: forced cast from 'Int?' to 'Int' only unwraps optionals; did you mean to use '!'?
 6 | 		for c in customers {
 7 | 			if !(o["customerId"] as! Int == c["id"] as! Int) { continue }
 8 | 			_res.append((orderId: o["id"] as! Int, customerName: c["name"] as! String, total: o["total"] as! Int))
   |                                                                                                 `- warning: forced cast from 'Int?' to 'Int' only unwraps optionals; did you mean to use '!'?
 9 | 		}
10 | 	}

tests/machine/x/swift/inner_join.swift:15:25: error: value of type 'Any' has no subscripts
13 | print("--- Orders with customer info ---")
14 | for entry in result {
15 |     print("Order", entry["orderId"], "by", entry["customerName"], "- $", entry["total"])
   |                         `- error: value of type 'Any' has no subscripts
16 | }
17 | 

tests/machine/x/swift/inner_join.swift:15:49: error: value of type 'Any' has no subscripts
13 | print("--- Orders with customer info ---")
14 | for entry in result {
15 |     print("Order", entry["orderId"], "by", entry["customerName"], "- $", entry["total"])
   |                                                 `- error: value of type 'Any' has no subscripts
16 | }
17 | 

tests/machine/x/swift/inner_join.swift:15:79: error: value of type 'Any' has no subscripts
13 | print("--- Orders with customer info ---")
14 | for entry in result {
15 |     print("Order", entry["orderId"], "by", entry["customerName"], "- $", entry["total"])
   |                                                                               `- error: value of type 'Any' has no subscripts
16 | }
17 | 
